fixed mobile horizontal scroll

--- a/Product.css
+++ b/Product.css
@@ -86,6 +86,7 @@ nav img {
 
 .main {
     align-items: center;
+    overflow-x: hidden;
     
 }
 .main img {
